<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/iv"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/todo_123" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv"
            android:text="@string/name_1"
            android:textSize="22sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_toEndOf="@id/iv"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="-25dp"
            android:layout_toEndOf="@id/iv"
            android:text="@string/date_1"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>